<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5dc"
    tools:context=".AdminproductClick">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/biz_post_bar"
        android:background="#f5d9d5"
        />

    <ScrollView
        android:id="@+id/biz_scroll"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/biz_post_bar"
        android:background="@drawable/frame_border"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/biz_something"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/product_name"
                android:inputType="textMultiLine"
                android:padding="10dp" />

            <EditText
                android:id="@+id/biz_price"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="textMultiLine"
                android:padding="10dp" />


            <ImageView
                android:id="@+id/biz_imagei"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/upload" />

            <EditText
                android:id="@+id/biz_moredisc"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/more_information"
                android:inputType="textMultiLine"
                android:padding="10dp" />

            <Button
                android:id="@+id/biz_Post_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btn"
                android:text="@string/delete" />


            <Button
                android:id="@+id/biz_Post_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btn"
                android:text="@string/edit" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>