<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adroomClick">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/biz_post_bar"
        android:background="#f5d9d5" />

        <ScrollView
            android:id="@+id/biz_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/biz_post_bar"
            android:background="@drawable/frame_border"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_marginTop="1dp"
                android:layout_width="match_parent"
                android:paddingTop="5dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/biz_something"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/inputs"
                    android:ems="10"
                    android:hint="@string/room_number"
                    android:inputType="textMultiLine"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/biz_price"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/inputs"
                    android:ems="10"
                    android:hint="@string/price"
                    android:inputType="textMultiLine"
                    android:padding="10dp" />


                <Button
                    android:id="@+id/biz_Post_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn"
                    android:text="@string/edit" />

                <Button
                    android:id="@+id/biz_Post_delete"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/btn"
                    android:text="@string/delete" />

            </LinearLayout>
        </ScrollView>
</RelativeLayout>