<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5dc"
    tools:context=".productPost">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/biz_post_bar"
        android:background="#f5d9d5" />


    <!--    <FrameLayout-->

    <!--        android:id="@+id/biz_i"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_below="@id/biz_post_bar"-->
    <!--        android:layout_marginTop="5dp"-->
    <!--        android:fitsSystemWindows="true"-->
    <!--        android:background="@drawable/frame_border">-->

    <ScrollView
        android:id="@+id/biz_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/frame_border"
        android:layout_below="@+id/biz_post_bar"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/biz_something"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/product_name"
                android:inputType="textMultiLine"
                android:padding="10dp" />

            <EditText
                android:id="@+id/biz_price"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="textMultiLine"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/biz_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:textSize="20sp"
                    android:textColor="@color/Black"
                    android:text="@string/click_icon_to_add_image" />

                <ImageButton
                    android:id="@+id/biz_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="0dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/upload" />


            </LinearLayout>

            <ImageButton
                android:id="@+id/biz_imagei"
                android:layout_width="280dp"
                android:layout_height="370dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:srcCompat="@drawable/upload" />

            <EditText
                android:id="@+id/biz_moredisc"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:text="@string/more_information"
                android:inputType="textMultiLine"
                android:padding="10dp" />

            <Button
                android:id="@+id/biz_Post_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn"
                android:text="@string/post" />


        </LinearLayout>
    </ScrollView>
    <!--    </FrameLayout>-->

</RelativeLayout>