<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    android:background="@drawable/chat_border"
    android:orientation="vertical"
    app:cardCornerRadius="15dp">

<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".myCart">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_page_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5d9d5"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textColor="@color/Black"
                android:textSize="20sp"/>

            <TextView
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ksh: "
                android:textColor="@color/Black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/total_product_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_null"
                android:textColor="@color/Black"
                android:textSize="20sp"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/main_page_bar"
        android:id="@+id/Posts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="45dp"
        android:layout_alignBottom="@+id/proceed_to_buy"/>

    <Button
        android:id="@+id/proceed_to_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/post_btn"
        android:text="@string/proceed_to_buy" />

</RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>