<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#f5f5dc"
    tools:context=".login">

    <FrameLayout
        android:id="@+id/frame_i"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/log_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:hint="@string/email"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/inputs"
                android:padding="10dp"
                android:inputType="textEmailAddress" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/log_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/inputs"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/log_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="log in" />



            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/log_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_here"
                    android:layout_marginLeft="10dp"
                    android:textSize="15sp"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
                    />
                <TextView
                    android:id="@+id/log_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_blue_dark"
                    android:text="@string/forgot_password"
                    android:textStyle="bold"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
