<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout"
    android:orientation="vertical"
    app:cardCornerRadius="15dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/chat_border"
        android:orientation="vertical"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="11dp"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="true"
                    android:text="@string/product_name"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:text="Ksh."
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="26dp"
                        android:text="@string/price"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Quantity"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />



                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/quantity"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />



                </LinearLayout>




            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
