<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#f5f5dc"
    android:layout_height="match_parent"
    tools:context=".profile">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_page_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5d9d5"
        android:fitsSystemWindows="true" />

    <FrameLayout
        android:id="@+id/frame_i"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/frame_border">



        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/set_image1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="270dp"
            android:src="@drawable/choose"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/set_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                app:civ_border_width="2dp"
                android:src="@drawable/nav" />

            <EditText
                android:id="@+id/set_fullname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/enter_your_full_name"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:clickable="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/inputs"
                android:inputType="textMultiLine"
                android:focusable="true" />

            <EditText
                android:id="@+id/set_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/enter_phone_number"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:padding="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/inputs"
                android:inputType="textMultiLine"
                android:focusable="true" />

            <Button
                android:id="@+id/set_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn"
                android:text="Edit"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/set_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:visibility="gone"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn"
                android:text="@string/save"
                android:textSize="15sp"/>

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>